# module-sybase

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  TODO  configure.ac  qore-sybase-modules.spec
docs/: doxyfile.tmpl  mainpage.dox.tmpl  sybase-module-doc.html
src/: Makefile.am  command.cc  command.cpp  command.h  connection.cc  connection.cpp  connection.h  conversions.cc  conversions.cpp  conversions.h  dbmodulewrap.h  emptystatement.h  encoding_helpers.cc  encoding_helpers.cpp  error.h  minitest.hpp  resultfactory.h  row_output_buffers.cc  row_output_buffers.cpp  row_output_buffers.h  single-compilation-unit.cc  single-compilation-unit.cpp  statement.cc  statement.cpp  statement.h  sybase.cc  sybase.cpp  sybase.h  sybase_query.cc  sybase_query.cpp  sybase_query.h  utils.h
src/tests/: conversions_tests.cc  executor_rpc_tests.cc  executor_tests.cc  initiate_rpc_command_tests.cc
test/: db-test.q  sql-stmt.q  sybase-sql.qtest  sybase-statement.qtest  sybase-test.q  sybase-types.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
test/old/: sql-stmt.q  sybase-sql.qtest  sybase-test.q
